--- a/auction-lyt-c-pc2/pages/auction-hall.html
+++ b/auction-lyt-c-pc2/pages/auction-hall.html
@@ -75,12 +75,12 @@
       </div>
     </header>
   </div>
-
-  <!-- 页面头部 -->
-  <section class="page-header-section">
-    <div class="container">
-      <h1>拍卖大厅</h1>
-      <p>实时竞拍,公平公正,轻松拍得心仪资产</p>
+  <!-- 页面横幅 -->
+  <section class="page-banner">
+    <img class="page-banner-bg" src="https://img.zgfczc.com/auction/image/auction-hall.jpg" alt="拍卖大厅">
+    <div class="page-banner-content">
+      <h1 class="page-banner-title">拍卖大厅</h1>
+      <p class="page-banner-subtitle">实时竞拍,公平公正,轻松拍得心仪资产</p>
     </div>
   </section>
 
