--- a/auction-lyt-c-pc2/pages/auction-list.html
+++ b/auction-lyt-c-pc2/pages/auction-list.html
@@ -75,11 +75,12 @@
       </div>
     </header>
   </div>
-  <!-- 页面头部 -->
-  <section class="page-header-section">
-    <div class="container">
-      <h1>拍卖会</h1>
-      <p>查看所有拍卖会,参与线上竞拍</p>
+  <!-- 页面横幅 -->
+  <section class="page-banner">
+    <img class="page-banner-bg" src="https://img.zgfczc.com/auction/image/auction-list.jpg" alt="拍卖会">
+    <div class="page-banner-content">
+      <h1 class="page-banner-title">拍卖会</h1>
+      <p class="page-banner-subtitle">查看所有拍卖会,参与线上竞拍</p>
     </div>
   </section>
 
