--- a/auction-lyt-c-pc2/pages/targets-list.html
+++ b/auction-lyt-c-pc2/pages/targets-list.html
@@ -76,11 +76,12 @@
       </div>
     </header>
   </div>
-  <!-- 页面头部 -->
-  <section class="page-header-section">
-    <div class="container">
-      <h1>标的物查询</h1>
-      <p>浏览所有拍卖标的物，找到您心仪的资产</p>
+  <!-- 页面横幅 -->
+  <section class="page-banner">
+    <img class="page-banner-bg" src="https://img.zgfczc.com/auction/image/targets.jpg" alt="标的物">
+    <div class="page-banner-content">
+      <h1 class="page-banner-title">标的物查询</h1>
+      <p class="page-banner-subtitle">浏览所有拍卖标的物，找到您心仪的资产</p>
     </div>
   </section>
 
