--- a/auction-lyt-c-pc2/pages/auction-hall.html
+++ b/auction-lyt-c-pc2/pages/auction-hall.html
@@ -77,7 +77,7 @@
   </div>
   <!-- 页面横幅 -->
   <section class="page-banner">
-    <img class="page-banner-bg" src="https://img.zgfczc.com/auction/image/auction-hall.jpg" alt="拍卖大厅">
+    <img class="page-banner-bg" src="../images/page-banner-1.jpg" alt="拍卖大厅">
     <div class="page-banner-content">
       <h1 class="page-banner-title">拍卖大厅</h1>
       <p class="page-banner-subtitle">实时竞拍,公平公正,轻松拍得心仪资产</p>
