--- a/auction-lyt-c-pc2/pages/targets-list.html
+++ b/auction-lyt-c-pc2/pages/targets-list.html
@@ -78,7 +78,7 @@
   </div>
   <!-- 页面横幅 -->
   <section class="page-banner">
-    <img class="page-banner-bg" src="https://img.zgfczc.com/auction/image/targets.jpg" alt="标的物">
+    <img class="page-banner-bg" src="../images/page-banner-1.jpg" alt="标的物">
     <div class="page-banner-content">
       <h1 class="page-banner-title">标的物查询</h1>
       <p class="page-banner-subtitle">浏览所有拍卖标的物，找到您心仪的资产</p>
