--- a/auction-lyt-c-pc2/pages/about.html
+++ b/auction-lyt-c-pc2/pages/about.html
@@ -77,7 +77,7 @@
   </div>
   <!-- 页面横幅 -->
   <section class="page-banner">
-    <img class="page-banner-bg" src="https://img.zgfczc.com/auction/image/about.jpg" alt="关于我们">
+    <img class="page-banner-bg" src="../images/page-banner-1.jpg" alt="关于我们">
     <div class="page-banner-content">
       <h1 class="page-banner-title">关于我们</h1>
       <p class="page-banner-subtitle">国有企业 · 专业可靠 · 服务至上</p>
