--- a/auction-lyt-c-pc2/pages/help.html
+++ b/auction-lyt-c-pc2/pages/help.html
@@ -77,7 +77,7 @@
   </div>
   <!-- 页面横幅 -->
   <section class="page-banner">
-    <img class="page-banner-bg" src="https://img.zgfczc.com/auction/image/help.jpg" alt="帮助中心">
+    <img class="page-banner-bg" src="../images/page-banner-2.jpg" alt="帮助中心">
     <div class="page-banner-content">
       <h1 class="page-banner-title">帮助中心</h1>
       <p class="page-banner-subtitle">贴心服务,全程指导,轻松参与拍卖</p>
