--- a/auction-lyt-c-uni/pages/info/index.html
+++ b/auction-lyt-c-uni/pages/info/index.html
@@ -14,7 +14,7 @@
     <div class="container">
         <!-- 头部用户信息 -->
         <div class="header-content">
-            <img class="header-img" src="../../images/header-img.svg" alt="头像">
+            <div class="header-img">👤</div>
             <div class="user-info" id="userInfo">
                 <div class="info-content">
                     <div class="user-name" id="userName">张三</div>
@@ -34,27 +34,19 @@
                 <div class="box-title">我的参拍</div>
                 <div class="content grid4">
                     <div class="content-item" onclick="navigateTo('myLots/index.html')">
-                        <div class="item-img">
-                            <img src="../../images/sign.svg" alt="报名中">
-                        </div>
+                        <div class="item-img">📝</div>
                         <div class="item-name">报名中</div>
                     </div>
                     <div class="content-item" onclick="navigateTo('myLots/index.html?type=1')">
-                        <div class="item-img">
-                            <img src="../../images/auction.svg" alt="参拍中">
-                        </div>
+                        <div class="item-img">🔨</div>
                         <div class="item-name">参拍中</div>
                     </div>
                     <div class="content-item" onclick="navigateTo('myLots/index.html?type=2')">
-                        <div class="item-img">
-                            <img src="../../images/transaction.svg" alt="已成交">
-                        </div>
+                        <div class="item-img">✅</div>
                         <div class="item-name">已成交</div>
                     </div>
                     <div class="content-item" onclick="navigateTo('myLots/index.html?type=3')">
-                        <div class="item-img">
-                            <img src="../../images/conclude.svg" alt="已结束">
-                        </div>
+                        <div class="item-img">🏁</div>
                         <div class="item-name">已结束</div>
                     </div>
                 </div>
@@ -65,21 +57,15 @@
                 <div class="box-title">常用功能</div>
                 <div class="content grid3">
                     <div class="content-item" onclick="navigateTo('myInfo/index.html')">
-                        <div class="item-img">
-                            <img src="../../images/info.svg" alt="我的资料">
-                        </div>
+                        <div class="item-img">📋</div>
                         <div class="item-name">我的资料</div>
                     </div>
                     <div class="content-item" onclick="navigateTo('myAuthentication/index.html')">
-                        <div class="item-img">
-                            <img src="../../images/authentication.svg" alt="我的认证">
-                        </div>
+                        <div class="item-img">✓</div>
                         <div class="item-name">我的认证</div>
                     </div>
                     <div class="content-item" onclick="navigateTo('myAttention/index.html')">
-                        <div class="item-img">
-                            <img src="../../images/attention.svg" alt="我的关注">
-                        </div>
+                        <div class="item-img">⭐</div>
                         <div class="item-name">我的关注</div>
                     </div>
                 </div>
